--- a/portfolio-page/package.json
+++ b/portfolio-page/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "react": "^18.3.1", 
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-optional-chaining": "^7.24.5",
     "gh-pages": "^6.1.1"
   }
 }
